--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "Lighthouse Labs",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "cors": "^2.8.5",
@@ -19,7 +20,8 @@
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "pg": "^6.4.2",
-    "pg-native": "^3.0.0"
+    "pg-native": "^3.0.0",
+    "react-google-maps": "^9.4.5"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
