--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "google-maps-react": "^2.0.2",
     "material-ui": "^0.20.2",
     "react": "^16.13.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.13.0",
+    "react-google-maps": "^9.4.5",
     "react-scripts": "3.4.0",
     "react-tap-event-plugin": "^3.0.3"
   },
