--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.13.0",
     "react-google-maps": "^9.4.5",
+    "react-google-places-autocomplete": "^1.6.2",
     "react-load-script": "0.0.6",
     "react-scripts": "3.4.0",
     "react-tap-event-plugin": "^3.0.3"
