--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.13.0",
+    "react-geocode": "^0.2.1",
     "react-google-maps": "^9.4.5",
     "react-google-places-autocomplete": "^1.6.2",
     "react-load-script": "0.0.6",
