--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "google-maps-react": "^2.0.2",
     "material-ui": "^0.20.2",
     "material-ui-search-bar": "^0.4.2",
