--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-google-places-autocomplete": "^1.6.2",
     "react-load-script": "0.0.6",
     "react-promise-tracker": "^2.1.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-tap-event-plugin": "^3.0.3"
   },
